--- a/TRACNGHIEM.csproj
+++ b/TRACNGHIEM.csproj
@@ -64,6 +64,12 @@
     <Compile Include="frmDangNhap.Designer.cs">
       <DependentUpon>frmDangNhap.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmDSDK.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmDSDK.Designer.cs">
+      <DependentUpon>frmDSDK.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -77,6 +83,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmDangNhap.resx">
       <DependentUpon>frmDangNhap.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmDSDK.resx">
+      <DependentUpon>frmDSDK.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
