--- a/App.config
+++ b/App.config
@@ -5,6 +5,13 @@
       <section name="DevExpress.LookAndFeel.Design.AppSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
   </configSections>
+  <connectionStrings>
+    <add name="THITN.Properties.Settings.TNConnectionString" connectionString="Data Source=DESKTOP-8BQ2NC6\SERVER1;Initial Catalog=THI_TN;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="THITN.Properties.Settings.THI_TNConnectionString"
+      connectionString="Data Source=DESKTOP-00M9FBR;Initial Catalog=THI_TN;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <applicationSettings>
     <DevExpress.LookAndFeel.Design.AppSettings>
       <setting name="DefaultAppSkin" serializeAs="String">
